Fixed: keeping poem container top-most in z-index order to allow scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -156,7 +156,7 @@ html, body {
     height: 100vh;
     overflow: scroll;
     overflow-y: scroll;
-    z-index: 11;
+    z-index: 12;
     //::-webkit-scrollbar {
     //  display: none;
     //}
@@ -165,8 +165,8 @@ html, body {
   .line-container {
     position: absolute;
     display: flex;
-    z-index: 20;
-    //height: 100vh;
+    z-index: 11;
+    height: 100vh;
     width: 100%;
     flex-direction: column;
     justify-content: center;
